--- a/_includes/home/intro.html
+++ b/_includes/home/intro.html
@@ -16,7 +16,7 @@
       </div>
   </div>
 </div>
-<div class="container">
+<!-- div class="container">
   <section class="section feature-box">
     <div class="jumbotron jumbotron-fluid amber img-fluid" style="background-image: url(/img/covid.png);">
       <div class="container text-right white-text">
@@ -27,4 +27,4 @@
       </div>
     </div>
   </section>
-</div>
+</div -->
