--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,7 +20,7 @@
 
                           <a class="dropdown-item" href="/about/mayors-tech-council">Mayor's Tech Council</a>
                           <a class="dropdown-item" href="/video/innovation-city">Innovation Sacramento Series</a>
-                          <a class="dropdown-item" href="/team">Team Bios</a>
+                          <!-- a class="dropdown-item" href="/team">Team Bios</a -->
                           <a class="dropdown-item" href="https://innovatesac.gitbook.io/goals-objectives/">Goals & Objectives</a>
 
                       </div>
