--- a/_includes/team.html
+++ b/_includes/team.html
@@ -31,7 +31,7 @@
         <div class="col-lg-5 col-xl-4 mb-4">
             <!--Featured image-->
             <div class="view overlay rounded z-depth-1-half">
-                <img src="/img/mofie/louis.jpg" class="img-fluid" alt="First sample image">
+                <img src="/img/focus-areas/food-systems.jpg" class="img-fluid" alt="First sample image">
             </div>
         </div>
         <!--Grid column-->
@@ -39,40 +39,13 @@
         <!--Grid column-->
         <div class="col-lg-7 col-xl-7 ml-xl-4 mb-4">
             <h3 class="mb-3 font-weight-bold dark-grey-text">
-                <strong>Louis Stewart</strong>
+                <strong>Chief Innovation Officer [Vacant]</strong>
             </h3>
             <p>
                 <a class="font-weight-bold dark-grey-text">Chief Innovation Officer</a></p>
-            <p class="grey-text">Louis Stewart currently serves as the City of Sacramento's first
-              Chief Innovation Officer.
-              Mr. Stewart is responsible for the development of a broad citywide portfolio of programs
-              and initiatives that support, drive, influence and build upon the City of Sacramento's
-              economic inclusion philosophy, business development strategies, goals, customer relationships
-              and business results. He spent the last seven years serving as California's Deputy Director
-              of Innovation and Entrepreneurship in the Governor’s Office of Business and Economic
-              Development (GO-Biz). In that capacity he oversaw the coordination and promotion of
-              innovative programs, activities, and emerging technologies throughout California for the
-              last seven years. He managed a robust statewide innovation-based economic development support
-              network of regional innovation clusters called the California Innovation Hubs (iHubs). Mr.
-              Stewart has served in the public sector for 10 years including as the Deputy Director of the
-              Census for the Governor’s Office of Planning and Research, the Assistant Deputy Director of
-              the Field Operations Division for the Department of Motor Vehicles, and the Information
-              Technology Director for Californians for Schwarzenegger. His professional experience also
-              includes 17 years in the private sector in sales, marketing, and information technology.</p>
+            <p class="grey-text">CINO bio</p>
 
-              <p class="grey-text">While Mr. Stewart’s experience is vast, his greatest expertise and focus includes:</p>
-
-              <p class="grey-text">Smart and Connected Cities</p>
-              <p class="grey-text">Bio Technology</p>
-              <p class="grey-text">Tech Equity</p>
-              <p class="grey-text">Development of Innovation Ecosystems</p>
-
-              <p class="grey-text">Mr. Stewart is a service based leader who embodies the belief that he cannot be a success without helping others be successful.</p>
-
-              <p class="grey-text">Mr. Stewart grew up in France and Italy, and played professional basketball
-                in Peru and Belgium until he landed back in Sacramento. Mr. Stewart received his Bachelor of Arts degree from Santa Clara University.</p>
-
-            <a class="btn btn-primary btn-md" href="https://twitter.com/MeetMrStewart"><i class="fa fa-twitter"></i> @MeetMrStewart</a>
+            <a class="btn btn-primary btn-md" href="https://twitter.com/#"><i class="fa fa-twitter"></i> @Twitter handle</a>
         </div>
         <!--Grid column-->
 
@@ -88,7 +61,7 @@
         <div class="col-lg-5 col-xl-4 mb-4">
             <!--Featured image-->
             <div class="view overlay rounded z-depth-1">
-                <img src="/img/mofie/ash-roughani.jpg" class="img-fluid" alt="Second sample image">
+                <img src="/img/focus-areas/food-systems.jpg" class="img-fluid" alt="Second sample image">
             </div>
         </div>
         <!--Grid column-->
@@ -96,20 +69,13 @@
         <!--Grid column-->
         <div class="col-lg-7 col-xl-7 ml-xl-4 mb-4">
             <h3 class="mb-3 font-weight-bold dark-grey-text">
-                <strong>Ash Roughani</strong>
+                <strong>Innovation Specialist [Vacant]</strong>
             </h3>
             <p>
-                <a class="font-weight-bold dark-grey-text">Staff Aide</a></p>
-            <p class="grey-text">Ash Roughani is Staff Aide and manages City grant programs such as the Creative Economy Pilot Project, in addition to other initiatives.
-              Ash is a systems thinker who synthesizes his deep knowledge of public policy and business strategy with technical
-              skills in product management, web development, human centered design, and community building. Prior to his role at
-              the City, Ash founded and launched several civic technology startups, including Public Innovation, Code for Sacramento,
-              and Delivery Unit. He was formerly Senior Associate at California Forward, served as an Executive Fellow in the
-              Schwarzenegger Administration. Ash holds a Master of Public Policy and Administration degree from Sacramento State,
-              a BA in Philosophy from UC Santa Barbara, and completed half of the MBA program at the UC Davis Graduate School of
-              Management.</p>
+                <a class="font-weight-bold dark-grey-text">Innovation Specialist</a></p>
+            <p class="grey-text">Innovation Specialist Bio</p>
 
-            <a class="btn btn-primary btn-md" href="https://twitter.com/roughani"><i class="fa fa-twitter"></i> @roughani</a>
+            <a class="btn btn-primary btn-md" href="https://twitter.com/#"><i class="fa fa-twitter"></i> @Twitter handle</a>
         </div>
         <!--Grid column-->
 
@@ -136,7 +102,7 @@
                 <strong>Aubree Taylor</strong>
             </h3>
             <p>
-                <a class="font-weight-bold dark-grey-text">Content Strategist</a></p>
+                <a class="font-weight-bold dark-grey-text">Innovation Program Technician</a></p>
             <p class="grey-text">Aubree Taylor is an Administrative Technician with
               the City of Sacramento’s Office of Innovation and Economic Development.
               She manages the City’s SUTL Innovation Grant Program in addition to other
