--- a/_includes/team.html
+++ b/_includes/team.html
@@ -108,7 +108,7 @@
               She manages the City’s SUTL Innovation Grant Program in addition to other
               initiatives. Aubree has been with the City of Sacramento since 2014 and
               got her start in Sacramento’s Mayor’s Office in Constituent Affairs. She
-              holds a BS in Materials Science & Engineering from the University of
+              holds a BS degree in Materials Science & Engineering from the University of
               California, Merced and, as a life-long learner, has studied Computer
               Science at Sacramento City College. Aubree combines her love for public
               service with a technical background to help grow the City’s innovation
